added a few tweaks
